# xml-search-engine

./: .gitignore  CMakeLists.txt  README.md  aliases.h  commandline.hpp  document.h  indexer.cpp  indexer.h  lexer.hpp  main.cpp
.github/workflows/: ci.yml
